# python-csv2xlsx

./: .gitignore  .python-version-pyb  LICENSE  README.md  build.py  clean.sh  coverage.toml  hatch.toml  pyproject.toml  pyrefly.toml  requirements-pyb.txt  requirements.txt  ruff.toml  test_and_build.sh
requirements/: requirements-hatch-test.py3.11.txt  requirements-hatch-test.py3.12.txt  requirements-hatch-test.py3.13.txt  requirements-hatch-test.py3.14.txt
src/dhk/csv2xlsx/: __about__.py  __init__.py  cli.py  csv2xlsx.py
src/main/python/dhk/csv2xlsx/: cli.py  csv2xlsx.py
src/unittest/python/dhk/tests/csv2xlsx/: cli_tests.py  csv2xslx_tests.py
tests/: cli_test.py  csv2xslx_test.py
